# hcalory-ble

./: hacs.json  pyproject.toml
custom_components/hcalory_ble/: manifest.json
